Fix/Update/Add/Build Commit:
Updated complex-commands like /proxy, /servergroup, /tempserver,
/staticserver
Fixed some bugs in "Boot"
Changed Build to: '82'
Added some stuff
etc. etc.